# OSQUERY

./: README.md
kedar/: README.md  cli_test.cpp  query_internal.cpp  test.cpp  test.table
osquery/: README.md
osquery/client/: CMakeLists.txt  client.cpp
osquery/create_lib/: CMakeLists.txt  test.cpp  test.h
tables/: README.md  test1.cpp  test1.table  test_ls.cpp  test_ls.table
